Working view for drill. Stubbed view for answer. Stats tracking incomplete pending work on answer view.

--- a/tdd_exercise/templates/answer.html
+++ b/tdd_exercise/templates/answer.html
@@ -2,5 +2,5 @@
 {% load static%}
 {% block content %}
 <h2>Answer</h2>
-
+{{ clue.entry.entry_text }} is the correct answer! You have now answered 1 (of 3) clues correctly"
 {% endblock%}
